fix: getFirst -> get(0)